--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Experimental Formgiving of Visual Information
+description: Information for course ID5231
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
-
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+url: experimental-formgiving.github.io/
