--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Experimental Formgiving of Visual Information
+title: EFVI 2023-2024
 description: Information for course ID5231
 theme: just-the-docs
 
